2004-06-02  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/gradient_edit.pdb: forgot two more s/int32/enum/.

	* app/pdb/gradient_edit_cmds.c
	* libgimp/gimpgradientedit_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13476 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-02  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/gradient_edit.pdb: forgot two more s/int32/enum/.
+
+	* app/pdb/gradient_edit_cmds.c
+	* libgimp/gimpgradientedit_pdb.[ch]: regenerated.
+
 2004-06-01  Sven Neumann  <sven@gimp.org>
 
 	* tools/pdbgen/pdb/image.pdb
