2004-06-02  Sven Neumann  <sven@gimp.org>
	* libgimp/libgimp-docs.sgml
	* libgimp/tmpl/gimpgradientedit.sgml: added section for the new
	gradient editing API.

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpenums.sgml
	* libgimp/tmpl/gimpgradients.sgml
	* libgimp/tmpl/gimpplugin.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13477 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-docs.sgml
+	* libgimp/tmpl/gimpgradientedit.sgml: added section for the new
+	gradient editing API.
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpenums.sgml
+	* libgimp/tmpl/gimpgradients.sgml
+	* libgimp/tmpl/gimpplugin.sgml: updated.
+
 2004-05-24  Michael Natterer  <mitch@gimp.org>
 
 	* app/Makefile.am
