2004-06-02  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/gradient_edit.pdb
	* tools/pdbgen/pdb/gradients.pdb: mark new API as new using $since.

	* libgimp/gimpgradientedit_pdb.c
	* libgimp/gimpgradients_pdb.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13478 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/gradient_edit.pdb
+	* tools/pdbgen/pdb/gradients.pdb: mark new API as new using $since.
+
+	* libgimp/gimpgradientedit_pdb.c
+	* libgimp/gimpgradients_pdb.c: regenerated.
+
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/gradient_edit.pdb: forgot two more s/int32/enum/.
