2004-06-02  Sven Neumann  <sven@gimp.org>
	* NEWS
	* README: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13480 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
+	* NEWS
+	* README: updated.
+
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_init): accept
