added more contributors
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13486 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2004-06-02  Sven Neumann  <sven@gimp.org>
 
 	* INSTALL: updated for gimp-2.1. Suggest to use gimp-print
-	4.2.7-pre1 in case of problems (see bug #138273).
+	version 4.2.7-pre1 in case of problems (see bug #138273).
 
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
