--- a/NEWS
+++ b/NEWS
@@ -83,7 +83,7 @@ Contributors:
 
    Michael Natterer, Sven Neumann, Maurits Rijk, Manish Singh,
    Henrik Brix Andersen, Philip Lafleur, Raphael Quinet, Simon Budig,
-   William Skaggs, Shlomi Fish, Kevin, Cozens, Jakub Steiner, Daniel
-   Kobras, Jordi Gay, Yeti, Marco Munari, David Necas, Nils Philippsen,
-   Soeren Wedel Nielsen, Joao S. O. Bueno, lots of translators and
-   the contributors that I accidentally missed.
+   William Skaggs, Shlomi Fish, Kevin, Cozens, Jakub Steiner, Dave Neary,
+   Daniel Kobras, Jordi Gay, Yeti, Marco Munari, David Necas, Nils
+   Philippsen, Soeren Wedel Nielsen, Joao S. O. Bueno, lots of translators
+   and the contributors that I accidentally missed...
