--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-02  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcontainerview.c: create the hash table when
+	inserting items; removes redundant create/destroy cycles and plugs
+	a memory leak.
+
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
 	* INSTALL: updated for gimp-2.1. Suggest to use gimp-print
 	version 4.2.7-pre1 in case of problems (see bug #138273).
 
