2004-06-02  Sven Neumann  <sven@gimp.org>
	* app/actions/Makefile.am (EXTRA_DIST)
	* app/menus/Makefile.am (EXTRA_DIST): removed makefile.msc until
	they have been added.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13488 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-02  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/Makefile.am (EXTRA_DIST)
+	* app/menus/Makefile.am (EXTRA_DIST): removed makefile.msc until
+	they have been added.
+
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpcontainerview.c: create the hash table when
 	inserting items; removes redundant create/destroy cycles and plugs
 	a memory leak.
