2004-06-02  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumbnail.c: plugged a memory leak.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13490 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumbnail.c: plugged a small memory leak.
+
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdnd.h: removed enum GimpDndType...
