--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-02  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdnd.[ch]: removed utility funtion
+	gimp_dnd_open_files().
+
+	* app/widgets/gimptoolbox-dnd.c: added gimp_toolbox_drop_files()
+	instead.
+
+	* app/display/gimpdisplayshell-dnd.c (gimp_display_shell_drop_files):
+	show the error message if opening a dropped file fails.
+
 2004-06-02  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumbnail.c: plugged a small memory leak.
