2004-06-02  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: added gimptoolbox-dnd.c and gimptoolbox-image-area.c


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13492 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-02  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: added gimptoolbox-dnd.c and gimptoolbox-image-area.c
+
 2004-06-01  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
