2004-06-02  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/gradient_edit.pdb: set_blending_function() and
	set_coloring_type() work on segment ranges, renamed them
	accordingly. Spotted by Shlomi Fish.

	* app/pdb/gradient_edit_cmds.c
	* libgimp/gimpgradientedit_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13493 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
+	* tools/pdbgen/pdb/gradient_edit.pdb: set_blending_function() and
+	set_coloring_type() work on segment ranges, renamed them
+	accordingly. Spotted by Shlomi Fish.
+
+	* app/pdb/gradient_edit_cmds.c
+	* libgimp/gimpgradientedit_pdb.[ch]: regenerated.
+
+2004-06-02  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdnd.[ch]: removed utility funtion
 	gimp_dnd_open_files().
 
