2004-06-02  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt: follow function renaming.

	* libgimp/tmpl/gimpgradientedit.sgml: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13495 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-02  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt: follow function renaming.
+
+	* libgimp/tmpl/gimpgradientedit.sgml: regenerated.
+
 2004-06-02  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-docs.sgml
