2004-06-02  Sven Neumann  <sven@gimp.org>
	* INSTALL: more updates.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13498 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-02  Sven Neumann  <sven@gimp.org>
 
+	* INSTALL: more updates.
+
+2004-06-02  Sven Neumann  <sven@gimp.org>
+
 	* Made 2.1.0 development release.
 
 2004-06-02  Sven Neumann  <sven@gimp.org>
