2004-06-03  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpgradienteditor.c (control_motion): use the newly
	added GimpGradient API to set the segment's handles instead of
	setting the values directly. Dirties the gradient correctly and
	makes the preview update instantly again. Fixes bug #143605.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13500 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpgradienteditor.c (control_motion): use the newly
+	added GimpGradient API to set the segment's handles instead of
+	setting the values directly. Dirties the gradient correctly and
+	makes the preview update instantly again. Fixes bug #143605.
+
 2004-06-03  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/file-open-location-dialog.c
