--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-03  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+	
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: added gimptoolbox-dnd.c and gimptoolbox-image-area.c
