Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13502 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-03  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: corrected italian translation.
+
 2004-06-01  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
