2004-06-03  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcursor.c: some cleanup. Make the tool_cursor
	and cursor_modifier components slightly transparent.

	* cursors/cursor-mouse.png: was the wrong image.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13508 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-03  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcursor.c: some cleanup. Make the tool_cursor
+	and cursor_modifier components slightly transparent.
+
+	* cursors/cursor-mouse.png: was the wrong image.
+
+2004-06-03  Michael Natterer  <mitch@gimp.org>
+
 	* cursors/Makefile.am
 	* cursors/*.png: added PNG version of all cursors.
 
