--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
+	* app/text/gimptextlayer-transform.[ch]: updated the (still unused)
+	unused text transformation code.
+
+	* app/text/gimptext-bitmap.c: removed a redundant transformation.
+
 2004-06-05  Michael Natterer  <mitch@gimp.org>
 
 	* cursors/Makefile.am
