--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-scripts.c (script_fu_interface):
+	left align toggle buttons.
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimptextlayer-transform.[ch]: updated the (still unused)
 	unused text transformation code.
 
