--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-05  Manish Singh  <yosh@gimp.org>
+
+	* app/gui/preferences-dialog.c (prefs_dialog_new): update call
+	to prefs_spin_button_add for num-processors too.
+
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-scripts.c (script_fu_interface):
