--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff.c: save the proper value for type of alpha
+	channel. Fixes bug #143522; patch by Philip Lafleur.
+
 2004-06-05  Manish Singh  <yosh@gimp.org>
 
 	* app/gui/preferences-dialog.c (prefs_dialog_new): update call
