--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/snoise.c: applied a modifed patch from Yeti that
+	adds a preview to the Solid Noise plug-in (bug #142587).
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/tiff.c: save the proper value for type of alpha
 	channel. Fixes bug #143522; patch by Philip Lafleur.
 
