2004-06-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/glob.c: added a simple glob plug-in based on
	some old code by George Hartz. This plug-in is very useful when
	you need to do batch processing, especially from Script-Fu.
	Fixes bug #143661.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13529 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/Makefile.am
+	* plug-ins/common/plugin-defs.pl
+	* plug-ins/common/glob.c: added a simple glob plug-in based on
+	some old code by George Hartz. This plug-in is very useful when
+	you need to do batch processing, especially from Script-Fu.
+	Fixes bug #143661.
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpgradienteditor.c: applied a patch from David
 	Gowers that makes the gradient editor display the perceptual
 	intensity of the color under the cursor (bug #135037).
